tests/snapshots/skilled__tui__tests__adoption_outcome_not_saved.snap
---
source: src/tui.rs
expression: rendered
---

  ┌ Adoption needs attention ─────────────────────────────── nothing written ┐
  │                                                                          │
  │  Skill content changed after the adoption preview                        │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │  ──────────────────────────────────────────────────────────────────────  │
  │  Review the result below                                      Esc Close  │
  │                                                                          │
  └──────────────────────────────────────────────────────────────────────────┘
