tests/snapshots/skilled__tui__tests__adoption_outcome_saved_failed.snap
---
source: src/tui.rs
expression: rendered
---

  ┌ Adoption needs attention ───────────────────────────── baseline recorded ┐
  │                                                                          │
  │  Baseline saved; verification failed: Skill content changed after the a  │
  │  doption preview                                                         │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │  ──────────────────────────────────────────────────────────────────────  │
  │  Baseline saved; verification failed                          Esc Close  │
  │                                                                          │
  └──────────────────────────────────────────────────────────────────────────┘
