tests/snapshots/skilled__tui__tests__adoption_outcome_saved_incomplete.snap
---
source: src/tui.rs
expression: rendered
---

  ┌ Adoption needs attention ───────────────────────────── baseline recorded ┐
  │                                                                          │
  │  Baseline saved; verification incomplete: Skill content could not be re  │
  │  ad                                                                      │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │  ──────────────────────────────────────────────────────────────────────  │
  │  Baseline saved; verification incomplete                      Esc Close  │
  │                                                                          │
  └──────────────────────────────────────────────────────────────────────────┘
