tests/snapshots/skilled__tui__tests__vendored_blocked.snap
---
source: src/tui.rs
expression: screen
---

  ┌ Skill check needs attention ─────────────────────────────── origin check ┐
  │                                                                          │
  │  Check blocked: Modified skill: content differs from the adopted baseli  │
  │  ne                                                                      │
  │  No replacement was started.                                             │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │  ──────────────────────────────────────────────────────────────────────  │
  │  Check blocked — no replacement was started                   Esc Close  │
  │                                                                          │
  └──────────────────────────────────────────────────────────────────────────┘
