tests/snapshots/skilled__tui__tests__vendored_checking.snap
---
source: src/tui.rs
expression: screen
---

  ┌ Checking skill origin ───────────────────────────────────── origin check ┐
  │                                                                          │
  │  Checking the confirmed origin and reading its selected subtree.         │
  │  No skill content or provenance is changed until a complete replacement  │
  │   plan is confirmed.                                                     │
  │  Esc cancels this check.                                                 │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │  ──────────────────────────────────────────────────────────────────────  │
  │  Checking — no skill files are written                       Esc Cancel  │
  │                                                                          │
  └──────────────────────────────────────────────────────────────────────────┘
