tests/snapshots/skilled__tui__tests__vendored_preview.snap
---
source: src/tui.rs
expression: screen
---

  ┌ Skill update preview ───────────────────────────────── read-only preview ┐
  │                                                                          │
  │  Check complete; this preview does not write files or metadata.          │
  │  Source: /source                                                         │
  │  Skill: /source/skills/demo                                              │
  │  Origin: https://github.com/example/demo                                 │
  │  Origin subdirectory: skills/demo                                        │
  │  Tracking branch: refs/heads/main                                        │
  │  Pinned origin revision: 0123456789abcdef0123456789abcdef01234567        │
  │  Adopted baseline v1: 1111111111111111111111111111111111111111111111111  │
  │  111111111111111                                                         │
  │  Proposed baseline v1: 222222222222222222222222222222222222222222222222  │
  │  2222222222222222                                                        │
  │  Expected regular files: 1                                               │
  │  Planned file changes:                                                   │
  │  /source/skills/demo/SKILL.md: modify 12 → 18 bytes, 3 → 4 lines         │
  │  Affected installations:                                                 │
  │  Codex: /installed/demo                                                  │
  │  ──────────────────────────────────────────────────────────────────────  │
  │  Read-only result — no changes applied                        Esc Close  │
  │                                                                          │
  └──────────────────────────────────────────────────────────────────────────┘
