tests/snapshots/skilled__tui__tests__vendored_report.snap
---
source: src/tui.rs
expression: screen
---

  ┌ Skill update report ──────────────────────────────── replacement outcome ┐
  │                                                                          │
  │  Skill update verified; provenance saved.                                │
  │  Source HEAD and index unchanged.                                        │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │  ──────────────────────────────────────────────────────────────────────  │
  │  Replacement result shown                                     Esc Close  │
  │                                                                          │
  └──────────────────────────────────────────────────────────────────────────┘
